--- a/ask-ray-liferay-chatbot-dialogflowv2-service-service/build.gradle
+++ b/ask-ray-liferay-chatbot-dialogflowv2-service-service/build.gradle
@@ -1,6 +1,7 @@
 dependencies {
 	compileOnly group: "com.liferay", name: "com.liferay.petra.lang"
 	compileOnly group: "com.liferay", name: "com.liferay.petra.string"
+	compileOnly group: 'com.liferay', name: 'com.liferay.petra.sql.dsl.api', version: '1.0.0'
 	compileOnly group: "com.liferay", name: "com.liferay.portal.aop.api"
 	compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel"
 	compileOnly group: "org.osgi", name: "org.osgi.annotation.versioning"
